	      details page.
	  - In the 'LDAP server configuration' page, show each MUST/MAY
	    attribute (and it's OID number) in a foldable list for each
	    of the attributes the LDAP server knows about.
	  - Allow for setting a limit on how many users allowed under
	    a domain branch
	  - Only show version information on the 'home' page if we're
	    running in advanced mode.

	Misc changes
	  - Removed functions pql_remove_userattribute(),
	    pql_replace_userattributes() and pql_add_userattribute().
	    + The exact same functionality is in function
	      pql_replace_userattribute() (with some slight
	      modifications)
	  - Slight rewrite of the pql_replace_userattribute() function
	    to allow for fixing of LDAP error 65 (Object class violation).
	    + If we're modifying a value and we're missing an objectclass
	      and the objectclass we find that REQUIRE (MAY) some
	      attributes which we're missing, ask user/admin to fill
	      in the missing attributes, THEN retry to add/modify the
	      object.

phpQLAdmin 2.0.11 Release (Apr 28 2003)
	Bug fixes
	  - Move the checking for { and } (password scheme) to standalone to
	    make absolutly sure it's invoked...
	  - If a configuration option in LDAP is empty (which means we will
	    use the default values), an attempt to DELETE one value resulted
	    in a failure. In that case, if we don't get anything from the LDAP
	    database, use the default values as old values, and remove the
	    attribute value of interest.
	  - Branches which is dc, o or ou organized is ok to have without dot.

	GUI layout change
	 - Possibility to modify the minimum [UG]ID number for user creation.
	   Attribute minimumUIDNumber (OID: 1.3.6.1.4.1.8767.3.2.3.5) have been
	   added to the phpQLAdminConfig objectclass to support this.
	 - Add the possibility to add user to the 'super admin list' (one that
	   have access to create branch) by giving the option to be admin of
	   the top-most DN.